--- a/app/assets/stylesheets/cosmetics.scss
+++ b/app/assets/stylesheets/cosmetics.scss
@@ -41,3 +41,17 @@ body {
   height: 20px;
   border: none;
 }
+
+#price_button-1{
+  width: 50%;
+  float: left;
+}
+
+#price_button-2 {
+  width: 50%;
+  float: right;
+}
+
+.main_cosmetic {
+  height: 300px !important;
+}
