--- a/app/views/cosmetics/index.html.erb
+++ b/app/views/cosmetics/index.html.erb
@@ -1,17 +1,44 @@
 <div class="row">
 
-    <div class="col-lg-3">
+    <div class="col-lg-3 mt-4">
 
-        <h2 class="my-4">カテゴリ</h2>
-        <div class="list-group">
-            <a href="#" class="list-group-item">Category 1</a>
-            <a href="#" class="list-group-item">Category 2</a>
-            <a href="#" class="list-group-item">Category 3</a>
+        <div class="list-group mb-3">
+            <button type="button" class="list-group-item list-group-item-action active">
+                カテゴリ
+            </button>
+            <button onclick="window.location.href='/cosmetics/?event_count=0'" type="button"
+                class="list-group-item list-group-item-action">💥 売れ筋順並び替え</button>
+            <button onclick="window.location.href='/cosmetics/?event_count=1'" type="button"
+                class="list-group-item list-group-item-action">⭐️ カスタマーレビュー</button>
+            <div class="list-group-item">
+                <button onclick="window.location.href='/cosmetics/?event_count=2-1'" type="button" id="price_button-1"
+                    class="btn btn-secondary left">💰 価格 ▲</button>
+                <button onclick="window.location.href='/cosmetics/?event_count=2'" type="button" id="price_button-2"
+                    class="btn btn-secondary right">💰 価格 ▼</button>
+
+            </div>
+        </div>
+
+        <div class="bs-component">
+            <ul class="list-group">
+                
+                <li class="list-group-item d-flex justify-content-between align-items-center active">
+                    メーカー
+                </li>
+                <% @cosmetics.each do |cosmetic| %>
+                    <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <%= cosmetic.company_name %>
+                        <span class="badge badge-primary badge-pill">0</span>
+                    </li>
+                <% end %>
+
+            </ul>
         </div>
 
     </div>
-    <!-- /.col-lg-3 -->
 
+
+    <!-- /.col-lg-9 -->
     <div class="col-lg-9">
 
         <div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
@@ -22,13 +49,16 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="First slide">
+                    <a href="/cosmetics/<%= @hot_cosmetics[0].id %>"><img class="d-block img-fluid w-100 main_cosmetic"
+                            src="<%= url_for(@hot_cosmetics[0].image) %>" alt="First slide"></a>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Second slide">
+                    <a href="/cosmetics/<%= @hot_cosmetics[1].id %>"><img class="d-block img-fluid w-100 main_cosmetic"
+                            src="<%= url_for(@hot_cosmetics[1].image) %>" alt="Second slide"></a>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block img-fluid" src="http://placehold.it/900x350" alt="Third slide">
+                    <a href="/cosmetics/<%= @hot_cosmetics[2].id %>"><img class="d-block img-fluid w-100 main_cosmetic"
+                            src="<%= url_for(@hot_cosmetics[2].image) %>" alt="Third slide"></a>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -53,8 +83,7 @@
                                 class="text-primary" style="font-size: 13px;"><%= cosmetic.comment_count %>個の評価</span>
                         </h4>
                         <h5><%= number_to_currency(cosmetic.price) %></h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
-                            numquam aspernatur!</p>
+                        <p class="card-text"><%= cosmetic.desc %></p>
                     </div>
                     <div class="card-footer">
                         <div class="main-comment-score" data-score="<%= cosmetic.ave_score %>"></div>
@@ -67,14 +96,14 @@
     </div>
     <!-- /.col-lg-9 -->
 </div>
-<script>
-$(document).ready(function () {
-    $('.main-comment-score').raty({
+  <script>
+      $(document).ready(function () {
+        $('.main-comment-score').raty({
             readOnly: true,
             score: function () {
                 return $(this).attr('data-score');
             },
             path: '/images'
         });
-});
-</script>
+    });
+  </script>
