--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -85,7 +85,7 @@
     <div class="col-12">
       <div class="row">
         <div class="col-12">
-          <a href="#" class="btn btn-warning w-100 shadow" id="payment_btn">決済する</a>
+          <a href="#" class="btn btn-warning w-100 shadow p-3" id="payment_btn" style="font-size:15px">決済する</a>
         </div>
       </div>
 
