--- a/app/views/cosmetics/show.html.erb
+++ b/app/views/cosmetics/show.html.erb
@@ -20,18 +20,21 @@
 
     <div class="col-6">
         <h3><%= @cosmetic.product_name %></h3>
+        <hr>
+        <div class="text-right my-2" >
+        <span style="font-size:18px">TOTAL PRICE</span><span class="ml-2" style="font-weight:bold; color:red; font-size:25px;"><%= number_to_currency(@cosmetic.price) %></span>
+        </div>
+        <hr>
+        <p><%= @cosmetic.company_name %></p>
+        <h5 class="text-primary">説明</h5>
         <p><%= @cosmetic.desc %></p>
         <hr>
-        <h5>説明</h5>
-        <p><%= @cosmetic.company_name %></p>
-        <hr>
-        <h4>必須<br>オッションを選択する</h4>
+        <h5 class="text-primary">必須</h5>
         <%# data-remoteだけでAjax通信コードになっている %>
         <form action="/carts" method="POST" data-remote="true">
             <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
             <input type="hidden" name="cosmetic_id" value="<%= @cosmetic.id %>">
             <div calss="form-group">
-                <label for="exampleFormControlSelect1">Example select</label>
                 <label for="quantity">数量</label>
                 <select class="form-control" name="quantity" id="quantity">
                     <option value="1">1</option>
@@ -48,7 +51,7 @@
             </div>
             <br>
 
-            <button type="submit" class="btn btn-outline-dark">カートに入れる</button>
+            <button type="submit" class="btn btn-primary">カートに入れる</button>
         </form>
     </div>
 </div>
