--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="<%= asset_path("banner_1.png") %>" class="d-block w-100" alt="...">
+      <a href="/sales"><img src="<%= asset_path("banner_1.png") %>" class="d-block w-100" alt="..."></a>
     </div>
     <div class="carousel-item">
-      <img src="<%= asset_path("banner_2.jpg") %>" class="d-block w-100" alt="...">
+      <a href="/sales"><img src="<%= asset_path("banner_2.jpg") %>" class="d-block w-100" alt="..."></a>
     </div>
     <div class="carousel-item">
-      <img src="<%= asset_path("banner_3.jpg") %>" class="d-block w-100" alt="...">
+      <a href="/sales"><img src="<%= asset_path("banner_3.jpg") %>" class="d-block w-100" alt="..."></a>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -25,7 +25,7 @@
   </a>
 </div>
 
-<img src="<%= asset_path("banner_event.png") %>" class="img-fluid w-100 mb-3" alt="Responsive image">
+<a href="/sales"><img src="<%= asset_path("banner_event.png") %>" class="img-fluid w-100 mb-3" alt="Responsive image"></a>
 <h2>
   <p>💥 売れ筋ランキング</p>
   </h2>
@@ -37,8 +37,8 @@
         <div class="card-body">
           <h4 class="card-title"> <a href="/cosmetics/<%= cosmetic.id %>"><%= cosmetic.product_name %></a> <span
                                 class="text-primary" style="font-size: 13px;"><%= cosmetic.comment_count %>個の評価</span></h4>
-                                <h5><%= number_to_currency(cosmetic.price) %></h5>
-          <p class="card-text"><%= cosmetic.desc %></p>
+                                <h5 class="text-danger"><%= number_to_currency(cosmetic.price) %></h5>
+          <p class="card-text text-left " style="font-size:12px"><%= cosmetic.desc.truncate(45) %></p>
         </div>
         <div class="card-footer">
           <div class="main-comment-score" data-score="<%= cosmetic.ave_score %>"></div>
@@ -58,8 +58,8 @@
         <div class="card-body">
           <h4 class="card-title"> <a href="/cosmetics/<%= cosmetic.id %>"><%= cosmetic.product_name %></a> <span
                                 class="text-primary" style="font-size: 13px;"><%= cosmetic.comment_count %>個の評価</span></h4>
-                                <h5><%= number_to_currency(cosmetic.price) %></h5>
-          <p class="card-text"><%= cosmetic.desc %></p>
+                                <h5 class="text-danger"><%= number_to_currency(cosmetic.price) %></h5>
+          <p class="card-text text-left" style="font-size:12px"><%= cosmetic.desc.truncate(45) %></p>
         </div>
         <div class="card-footer">
           <div class="main-comment-score" data-score="<%= cosmetic.ave_score %>"></div>
