--- a/app/views/home/mypage.html.erb
+++ b/app/views/home/mypage.html.erb
@@ -1,68 +1,18 @@
-  <div class="row mt-5">
-    <div class="col-3">
-      <ul class="nav flex-column ml-3">
-        <li class="nav-item ">
-          <h5>
-            <a class="nav-link text-dark" href="#">마이페이지</a>
-          </h5>
-        </li>
-        <li class="nav-item">
-          <h5 class="nav-link">나의 히스킨 스토리</h5>
-          <ul class="nav flex-column ml-3">
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">나만의 패키지</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">내가 쓴 리뷰</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">문의내역</a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <h5 class="nav-link" href="#">구매 정보</h5>
-          <ul class="nav flex-column ml-3">
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">쿠폰</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">포인트</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">주문/배송 확인</a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <h5 class="nav-link">설정</h5>
-          <ul class="nav flex-column ml-3">
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">회원정보 수정</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link text-dark">카카오톡 알림 설정</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-    <div class="col-8">
+  <div class="row my-5">
+    <div class="col-12">
       <div class="row">
         <div class="col-6">
           <div class="card mx-5 shadow-sm">
             <div class="card-body text-center">
-              <h5 class="card-title">내 프로필</h5>
+              <h5 class="card-title my-3">プロフィル</h5>
               <div class="d-flex justify-content-around">
-                <div>
-                  <h3>히스킨</h3>
-                  <a href="/users/edit" class="btn btn-warning btn-sm px-4 d-block mb-1 shadow">수정</a>
-                  <a href="#" class="btn btn-warning btn-sm px-4 d-block shadow">쿠폰 0개</a>
+                <div class="col">
+                  <h3>LOEN</h3>
+                  <a href="/users/edit" class="btn btn-warning px-4 d-block mb-1 shadow">会員情報の変更</a>
                 </div>
-                <div>
-                  <p><%= @user.email %></p>
-                  <span class="badge badge-info px-4">지성 피부</span>
-									<a href="/users/sign_out" class="btn btn-dark btn-sm px-4 d-block shadow mt-3" data-method="delete">로그아웃</a>
+                <div class="col">
+                  <h3><%= @user.email %></h3>
+									<a href="/users/sign_out" class="btn btn-dark px-4 d-block mb-1 shadow" data-method="delete">ログアウト</a>
                 </div>
               </div>
             </div>
@@ -70,9 +20,9 @@
         </div>
         <div class="col-6">
 					<div class="card mx-5 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">주문/배송조회</h5>
-              <p class="card-text">총 <%= @user.orders.count %>건의 주문 내역이 있습니다</p>
+            <div class="card-body text-center">
+              <h5 class="card-title my-3">注文状況の確認</h5>
+              <p class="card-text">총 <strong class="text-danger"><%= @user.orders.count %></strong>件の注文が確認されました</p>
 							<a href="orders" class="btn btn-warning px-5 shadow">注文履歴</a>
             </div>
           </div>
