--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -7,13 +7,13 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 event_image" src="<%= asset_path("banner_event.png") %>" alt="">
           </a>
         </div>
-        <div class="col-md-5">
-          <h3>Project One</h3>
+        <div class="col-md-5 mt-3">
+          <h3>イベント １</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
-          <a class="btn btn-primary" href="#">詳細</a>
+          <a class="btn btn-warning" href="#">詳細</a>
         </div>
       </div>
       <!-- /.row -->
@@ -24,13 +24,13 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 event_image" src="<%= asset_path("banner_1.png") %>" alt="">
           </a>
         </div>
-        <div class="col-md-5">
-          <h3>Project Two</h3>
+        <div class="col-md-5 mt-3">
+          <h3>イベント ２</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-          <a class="btn btn-primary" href="#">詳細</a>
+          <a class="btn btn-warning" href="#">詳細</a>
         </div>
       </div>
       <!-- /.row -->
@@ -41,13 +41,13 @@
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 event_image" src="<%= asset_path("banner_2.jpg") %>" alt="">
           </a>
         </div>
-        <div class="col-md-5">
-          <h3>Project Three</h3>
+        <div class="col-md-5 mt-3">
+          <h3>イベント ３</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-          <a class="btn btn-primary" href="#">詳細</a>
+          <a class="btn btn-warning" href="#">詳細</a>
         </div>
       </div>
       <!-- /.row -->
@@ -59,13 +59,13 @@
 
         <div class="col-md-7">
           <a href="#">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="http://placehold.it/700x300" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0 event_image" src="<%= asset_path("banner_3.jpg") %>" alt="">
           </a>
         </div>
-        <div class="col-md-5">
-          <h3>Project Four</h3>
+        <div class="col-md-5 mt-3">
+          <h3>イベント ４</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-          <a class="btn btn-primary" href="#">詳細</a>
+          <a class="btn btn-warning" href="#">詳細</a>
         </div>
       </div>
       <!-- /.row -->
