--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,6 +23,9 @@
               <%= current_user.email %></a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="/mypage">マイページ</a>
+              <% if current_user.email == 'admin@example.com' %>
+              <a class="dropdown-item text-danger" href="/admin">管理者ページ</a>
+              <% end %>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="/users/sign_out" data-method="delete">ログアウト</a>
             </div>
