--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,9 +7,9 @@
     <div class="collapse navbar-collapse" id="navbarColor03">
       <div class="collapse navbar-collapse justify-content-end" id="navbarnavaltmarkup"
         navbarNavAltMarkup="navbarNavAltMarkup">
-      <div class="navbar-nav">
-          <a class="nav-link active" href="/cosmetics">ショッピング</a>
-          <a class="nav-link active text-danger" href="/sales">期間限定セール</a>
+        <div class="navbar-nav">
+          <a class="nav-link active text-danger" href="/cosmetics">ショッピング</a>
+          <a class="nav-link active" href="/sales">期間限定セール</a>
           <a class="nav-link active" href="/blogs">ビューティコラム</a>
           <a class="nav-link active" href="/news">お知らせ</a>
           <%# ログインしているユーザが見れる部分  %>
@@ -42,4 +42,8 @@
 
         </div>
       </div>
+      
   </nav>
+  <div class="text-right mr-3">❗️ テスト用のアカウント(管理者) ID : <strong>admin@example.com</strong> <br> PASSWORD : <strong>password</strong>
+  
+</div>
